# AI-PDF-Renamer

./: .gitignore  AGENTS.md  BUGS_AND_FIXES.md  CONTRIBUTING.md  DECISIONS.md  DEEP_CODE_INSPECTION.md  FINDINGS.md  LOG.md  Makefile  README.md  SECURITY.md  heuristic_patterns.json  pyproject.toml  ren.py  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  security.yml
_repo-inspiration/PDFs-AI-rename-main/: README.md
docs/: API.md  ARCHITECTURE.md  BUGS_AND_FIXES.md  DECISIONS.md  DEEP_CODE_INSPECTION.md  DESIGN.md  FINDINGS.md  LOG.md  PERFORMANCE.md  QUALITY_SCORE.md  README.md  RECOGNITION-RATE.md  RELIABILITY.md  REPO_MAP.md  RUNBOOK.md  ci-audit.md  ci-decision.md  ci.md
docs/exec-plans/: tech-debt-tracker.md
docs/product-specs/: PRD.md
scripts/: derive_category_aliases.py  undo_renames.py
src/ai_pdf_renamer/: cli.py  data_paths.py  gui.py  heuristics.py  llm.py  logging_utils.py  pdf_extract.py  rename_ops.py  renamer.py  text_utils.py  undo_cli.py
src/ai_pdf_renamer/data/: heuristic_scores.json  meta_stopwords.json
tests/: test_cli.py  test_data_paths.py  test_heuristics.py  test_llm_parsing.py  test_pdf_extract.py  test_renamer_generate_filename.py  test_text_utils.py
